create stock price service
